compile_fail.log
  File "./fail.py", line 1
    print("T)
            ^
SyntaxError: EOL while scanning string literal
